# openbgpd-portable

./: .gitignore  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile.am  README.md  VERSION  autogen.sh  configure.ac  update.sh
.github/workflows/: build.yaml  codeql-analysis.yaml  coverity.yaml
compat/: Makefile.am  getrtable.c
include/: Makefile.am  endian.h  imsg.h  stdlib.h  string.h  unistd.h
include/linux/: rtnetlink.h
include/net/: if.h  route.h
include/netinet/: icmp6.h  in.h  ip.h  ip_icmp.h  ip_ipsp.h
include/sys/: socket.h  time.h  types.h  wait.h
patches/: 0001-depend-on-carp-requieres-HAVE_CARP.patch  0002-Needs-HAVE_GETOPT_OPTRESET-for-handling-optreset.patch  0002-set-IPV6_V6ONLY-if-we-are-binding-to-an-IPv6-address.patch  0003-Special-handle-IPV6_MINHOPCOUNT-and-IP_MINTTL-since-.patch  0003-Special-handle-IPV6_MINHOPCOUNT-since-only-some-syst.patch  0003-set-IPV6_V6ONLY-if-we-are-binding-to-an-IPv6-address.patch  0004-Allow-overriding-default-user-and-file-locations.patch  0004-Special-handle-IPV6_MINHOPCOUNT-since-only-some-syst.patch  0005-Add-placeholders-to-manual-pages.patch  0005-Allow-overriding-default-user-and-file-locations.patch  0006-Add-compat-fixes-to-bgplgd.patch  0006-Add-placeholders-and-compat-fixes-to-bgplgd.patch  0006-Fix-parse.y-to-work-with-bison.patch  0006-Remove-cdef.h-include-in-log.h-and-json.h.patch  0007-Add-missing-endian.h-includes.patch  00XX-better-tcp_md5-handling.patch  00XX-combo-magic.patch  patch-bgpd-parse.patch
src/bgpctl/: Makefile.am
src/bgpd/: Makefile.am  bgpd_imsg.c  bitmap.c  carp-disabled.c  kroute-disabled.c  kroute-freebsd.c  kroute-linux.c  pfkey-disabled.c  pfkey-freebsd.c  pfkey-linux.c  pftable-disabled.c
src/bgplgd/: Makefile.am
src/bgplgsh/: Makefile.am
